fix homepage layout issues resulting from bootstrap bump

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -64,4 +64,6 @@
 
 .card-homepage {
 	background-color: rgba(0, 0, 0, 0.1) !important;
+	padding: 2%;
+	height: 100%;
 }
